# prompt-template-engine

./: .env  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  example.py  hf_upload.py  index.html  landing.html  prepare_release.py  ptool.py  pyproject.toml  record_results.py  release.py  requirements.txt  setup.py  test_all.py  test_import.py  test_run.py
css/: style.css
examples/: conditional_logic.py  conditional_template.py  loop_template.py  simple_greeting.py  simple_template.py
gh-pages/: index.html
prompt_template_engine/: __init__.py
prompt_templates/: __init__.py  __main__.py  templates.py
prompt_templates.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_engine.py
