[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt_templates"
version = "0.3.0"
description = "A curated collection of high-quality LLM prompt templates"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [{name = "Meridian Mind"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "jinja2>=3.0.0",
    "click>=8.0.0",
]

[project.scripts]
ptem = "ptem_cli:main"

[project.urls]
Homepage = "https://github.com/meridianmindx/prompt-template-engine"
